--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,12 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="ListView">
+        <item name="android:padding">16dp</item>
+        <item name="android:clipToPadding">false</item>
+        <item name="android:divider">@null</item>
+        <item name="android:dividerHeight">16dp</item>
+        <item name="android:background">@android:color/darker_gray</item>
+    </style>
+
 </resources>
